completed work on dbd map 4 improved prop fixes for compatibility with custom campaigns

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -290,14 +290,12 @@ add:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "[brush name],AddOutput,mins [-x -y -z],0,-1"
-	"OnMapSpawn" "[brush name],AddOutput,maxs [x y z],0,-1"
-	"OnMapSpawn" "[brush name],AddOutput,solid 2,0,-1"
 	"OnMapSpawn" "[brush name],[BlockNav/UnblockNav],,1,-1"
 }
 {
-	"classname" "func_nav_blocker"
+	"classname" "script_nav_blocker"
 	"origin" "[x y z]"
+	"extent" "[x y z]"
 	"targetname" "[brush name]"
 	"teamToBlock" "[n]"
 	"affectsFlow" "0"
