--- a/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
@@ -1397,6 +1397,11 @@ filter:
 {
 	"hammerid" "1281420"
 }
+; --- Remove ragdolls
+filter:
+{
+	"classname" "prop_ragdoll"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
@@ -1499,6 +1504,10 @@ filter:
 ; --- Remove loud sound from rock hitting helicopter
 {
 	"targetname" "Rock_Strike_sound"
+}
+; --- Remove music
+{
+	"classname" "ambient_music"
 }
 
 ; =====================================================
