--- a/cfg/stripper/maps/l4d_dbd2dc_clean_up.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_clean_up.cfg
@@ -1,3 +1,8 @@
+; =====================================================
+; ==               DEAD BEFORE DAWN DC               ==
+; ==                 MAP 3 - CLEAN UP                ==
+; =====================================================
+
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
@@ -476,7 +481,7 @@ add:
 	"targetname" "remove_battlefield_areas"
 	"remove_attributes" "1"
 }
-; --- Obscured: By vending machine before the west door event
+; --- Obscured: By vending machine before the north door event
 {
 	"classname" "script_nav_attribute_region"
 	"origin" "-3152 1800 -668"
@@ -623,13 +628,25 @@ filter:
 {
 	"targetname" "Andy_talk_checker"
 }
-; --- Remove some scripted hordes at the end of the map (nothing seems to trigger it, just in case)
+; --- Remove some scripted hordes at the end of the map (not used, just as a precaution)
 filter:
 {
 	"targetname" "fast_ende"
 }
 {
 	"targetname" "end_random"
+}
+; --- Remove extra horde from alarmed ATMs
+modify:
+{
+	match:
+	{
+		"classname" "prop_car_alarm"
+	}
+	delete:
+	{
+		"OnCarAlarmStart" "directorPanicEvent3-1"
+	}
 }
 
 
@@ -1187,6 +1204,57 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
+; --- Visual indication of spit block area
+add:
+{
+	"classname" "env_sprite"
+	"origin" "-4432 3576 -566"
+	"spawnflags" "1"
+	"model" "vgui/achievements/ach_kill_spitter_fast.vmt"
+	"fademindist" "0"
+	"fademaxdist" "150"
+	"fadescale" "1"
+	"scale" "0.3"
+	"GlowProxySize" "5"
+	"rendermode" "3"
+	"renderfx" "0"
+	"HDRColorScale" "0.7"
+}
+{
+	"classname" "env_sprite"
+	"origin" "-4232 3576 -658"
+	"spawnflags" "1"
+	"model" "vgui/achievements/ach_kill_spitter_fast.vmt"
+	"fademindist" "0"
+	"fademaxdist" "150"
+	"fadescale" "1"
+	"scale" "0.3"
+	"GlowProxySize" "5"
+	"rendermode" "3"
+	"renderfx" "0"
+	"HDRColorScale" "0.7"
+}
+; --- Change color of alarmed ATMs to make it obvious which ones are alarmed, hide sprites when alarm is done, make sound end sooner
+modify:
+{
+	match:
+	{
+		"classname" "prop_car_alarm"
+	}
+	delete:
+	{
+		"OnCarAlarmStart" "auto_alarm_s1StopSound25-1"
+	}
+	replace:
+	{
+		"rendercolor" "225 113 33"
+	}
+	insert:
+	{
+		"OnCarAlarmStart" "auto_alarm_b1,HideSprite,,15,-1"
+		"OnCarAlarmStart" "auto_alarm_s1,StopSound,,15,-1"
+	}
+}
 ; --- Remove ragdolls (and props incorrectly created as ragdolls)
 ; --- Also removes the laggy "Twitcher" ragdoll by the millionth customer door
 filter:
@@ -1472,16 +1540,40 @@ add:
 	"disableshadows" "1"
 	"spawnflags" "266"
 }
-; --- Vending machine outside the gun shop
+; --- Additional boxes at the vent drop to prevent players standing in the spit block area
 {
 	"classname" "prop_dynamic"
-	"origin" "-4072 4151 -936"
-	"angles" "0 90 0"
-	"model" "models/props_office/vending_machine01.mdl"
+	"origin" "-4252 3541 -874"
+	"angles" "0 0 0"
+	"model" "models/props/cs_assault/washer_box.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Fence to block back of security room in the gun store that has is within the spit block area
+{
+	"classname" "prop_dynamic"
+	"origin" "-4252 3584 -874"
+	"angles" "0 0 0"
+	"model" "models/props/cs_assault/washer_box.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4252 3629 -874"
+	"angles" "0 0 0"
+	"model" "models/props/cs_assault/washer_box.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4252 3585 -848"
+	"mins" "-22 -65 -88"
+	"maxs" "22 65 88"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Fence to block back of security room in the gun store to prevent standing in the spit block area
 {
 	"classname" "prop_dynamic"
 	"origin" "-4452 3640 -938"
@@ -1495,6 +1587,15 @@ add:
 	"origin" "-4358 3640 -938"
 	"angles" "0 90 0"
 	"model" "models/props_urban/fence_gate001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Vending machine outside the gun shop
+{
+	"classname" "prop_dynamic"
+	"origin" "-4072 4151 -936"
+	"angles" "0 90 0"
+	"model" "models/props_office/vending_machine01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
@@ -1764,6 +1865,10 @@ filter:
 }
 {
 	"targetname" "Ac_Unit_case03_crank_finished_02"
+}
+; --- Remove music
+{
+	"classname" "ambient_music"
 }
 
 ; =====================================================
