--- a/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
@@ -2434,6 +2434,10 @@ filter:
 {
 	"targetname" "lights_off"
 }
+; --- Remove music
+{
+	"classname" "ambient_music"
+}
 
 ; =====================================================
 ; ==             GFX / PARTICLES REMOVAL             ==
