--- a/cfg/cfgogl/spit_block.cfg
+++ b/cfg/cfgogl/spit_block.cfg
@@ -1,15 +1,16 @@
 // [l4d2_spitblock.smx]
 // Official Campaigns
-spit_block_square c4m2_sugarmill_a -1411.940430 -9491.997070 -1545.875244 -9602.097656
-spit_block_square c4m3_sugarmill_b -1411.940430 -9491.997070 -1545.875244 -9602.097656
-spit_block_square c5m3_cemetery 4160 333.04 4297 291.01
+spit_block_square c4m2_sugarmill_a -1411.940430 -9491.997070 -1545.875244 -9602.097656 // In the elevator
+spit_block_square c4m3_sugarmill_b -1411.940430 -9491.997070 -1545.875244 -9602.097656 // In the elevator
+spit_block_square c5m3_cemetery 4160 333.04 4297 291.01 // At the drop into the sewer
 
 //Custom Campaigns
-spit_block_square l4d_dbd2dc_clean_up -4194.448242 3614.163818 -4625.936523 3539.908936
-spit_block_square l4d_dbd2dc_undead_center -6902.102539 8809.659180 -7872.751953 8522.269531
+spit_block_square l4d_dbd2dc_clean_up -4194.448242 3614.163818 -4625.936523 3539.908936 // In the vent
+spit_block_square l4d_dbd2dc_undead_center -6906 8716 -7864 8512 // In the vent, crouching section, part 1
+spit_block_square l4d_dbd2dc_undead_center -7612 8804 -8720 268 // In the vent, drop section, part 2
 spit_block_square l4d2_fallindeath03 4562.987793 -1769.313721 4446.680664 -1623.422729
 spit_block_square l4d2_fallindeath04 1656.737061 -325.227692 1531.636108 -187.895630
-spit_block_square cdta_03warehouse 6311.086 -13217.889 6192.448 -13347.204
+spit_block_square cdta_03warehouse 6311.086 -13217.889 6192.448 -13347.204 // At the final ladder in the sewer
 spit_block_square downpour_sugarmill_a -1444.891235 -9514.031250 -1514.214478 -9575.968750
 spit_block_square downpour_sugarmill_b -1434.379028 -9517.581055 -1514.214478 -9575.968750
 spit_block_square l4d2_darkblood02_engine 2515 5610 2664 5770
