completed work on dbd5 c2m1 midnight riders bus c2m1 replaced angled blocker in saferoom c2m1 hittable dumpster outside the saferoom c2m1 Solidify shrubs by the saferoom c2m4 Solidify shrub by the one way drop c5m2 adjusted platform c5m5 remove added in tank spawn at the end of the map c5m5 distance to 500 (from 600)

--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -783,6 +783,16 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Solidify shrub by the one way drop
+{
+	"classname" "prop_dynamic"
+	"origin" "-2496 -768 -183"
+	"angles" "0 90 0"
+	"model" "models/props_foliage/swamp_shrubwall_512.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
