--- a/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
@@ -1392,6 +1392,44 @@ add:
 	"disableshadows" "1"
 	"rendermode" "10"
 }
+; --- Replace open van props with correct models and glass
+filter:
+{
+	"model" "models/props_vehicles/van_interior.mdl"
+}
+add:
+{
+	"classname" "prop_dynamic"
+	"origin" "2010 -1451 -252"
+	"angles" "17.4971 4.0975 12.6226"
+	"model" "models/props_vehicles/van.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2010 -1451 -252"
+	"angles" "17.4971 4.0975 12.6226"
+	"model" "models/props_vehicles/van_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1528 -1366 -140"
+	"angles" "2.4281 14.5088 2.37553"
+	"model" "models/props_vehicles/van.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1528 -1366 -140"
+	"angles" "2.4281 14.5088 2.37553"
+	"model" "models/props_vehicles/van_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Remove the breakable wall by the event
 filter:
 {
@@ -1504,6 +1542,31 @@ filter:
 ; --- Remove loud sound from rock hitting helicopter
 {
 	"targetname" "Rock_Strike_sound"
+}
+; --- Remove miscellanous sound effects from the map
+{
+	"classname" "annas_house_music"
+}
+{
+	"targetname" "ana_spot"
+}
+{
+	"targetname" "radio_ads"
+}
+{
+	"targetname" "radio_ads_1"
+}
+{
+	"targetname" "radio_ads_2"
+}
+{
+	"targetname" "reko_radio"
+}
+{
+	"targetname" "random_radio"
+}
+{
+	"targetname" "trigger_radio_1"
 }
 ; --- Remove music
 {
