--- a/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
@@ -2401,6 +2401,12 @@ filter:
 	"targetname" "radio_ads_2"
 }
 {
+	"targetname" "reko_radio"
+}
+{
+	"targetname" "trigger_radio_1"
+}
+{
 	"targetname" "church_guy"
 }
 ; --- Remove miscellanous sound effects from the map
