dbd5 tank spawn

--- a/cfg/stripper/maps/l4d_dbd2dc_new_dawn.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_new_dawn.cfg
@@ -29,6 +29,27 @@ filter:
 {
 	"targetname" "advancementtrigger_1"
 }
+; --- Teleport the tank to a better location when it spawns - credit: ProMod
+modify:
+{
+	match:
+	{
+		"targetname" "advancementtrigger_2"
+	}
+	insert:
+	{
+		"OnTrigger" "tank_spawned_timer,Enable,,0,-1"
+	}
+}
+add:
+{
+	"classname" "logic_timer"
+	"targetname" "tank_spawned_timer"
+	"StartDisabled" "1"
+	"RefireTime" "1"
+	"spawnflags" "0"
+	"OnTimer" "director,BeginScript,l4d_dbd2dc_new_dawn_tank_helper_promod,0,-1"
+}
 ; --- Remove the tank spawns on the roof
 filter:
 {
