--- a/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
@@ -287,7 +287,7 @@ modify:
 		"OnTrigger" "director,EndScript,,0,1"
 	}
 }
-; --- Make the event always be a consistent length
+; --- Make the event always last the same amount of time
 {
 	match:
 	{
@@ -697,7 +697,7 @@ add:
 	"origin" "-954 284 -466"
 	"targetname" "losfix_car_peach_b"
 }
-; --- Remove dumpster in the parking lot
+; --- Remove a dumpster in the parking lot
 filter:
 {
 	"hammerid" "2162083"
@@ -1216,7 +1216,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Solidiy non-solid hedges
+; --- Solidify non-solid hedges
 {
 	"classname" "prop_dynamic"
 	"origin" "-135 1900 -524"
@@ -1543,7 +1543,7 @@ filter:
 {
 	"targetname" "Rock_Strike_sound"
 }
-; --- Remove miscellanous sound effects from the map
+; --- Remove miscellaneous sound effects from the map
 {
 	"classname" "annas_house_music"
 }
