--- a/cfg/stripper/maps/l4d_dbd2dc_clean_up.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_clean_up.cfg
@@ -448,7 +448,7 @@ add:
 	"OnMapSpawn" "remove_battlefield_areas,ApplyNavAttributes,,10,-1"
 	"OnMapSpawn" "remove_obscured_areas,ApplyNavAttributes,,10,-1"
 }
-; --- Battlefield: Roof by the event / edge of roof
+; --- Battlefield: Around the millionth customer door event
 {
 	"classname" "script_nav_attribute_region"
 	"origin" "-4488 6792 -400"
@@ -1653,7 +1653,7 @@ add:
 ; ==                  SOUND REMOVAL                  ==
 ; ==    Remove or adjust sounds played by the map    ==
 ; =====================================================
-; --- Remove CJ / radio dude voice lines and other voice lines / triggered sound effects
+; --- Remove CJ / radio voice lines and other voice lines / triggered sound effects
 filter:
 {
 	"targetname" "cj_01"
@@ -1844,7 +1844,7 @@ filter:
 {
 	"targetname" "ellis_new"
 }
-; --- Remove miscellanous sound effects from the map
+; --- Remove miscellaneous sound effects from the map
 {
 	"message" "ambient/spacial_loops/ticketmachine_loop.wav"
 }
@@ -1989,7 +1989,7 @@ filter:
 	"classname" "trigger_once"
 	"OnStartTouch" "Andy_GunshotPlaySound0-1"
 }
-; --- Prevent infected from being pushes by the millionth door push triggers
+; --- Prevent infected from being pushed by the millionth door push triggers
 modify:
 {
 	match:
