--- a/cfg/stripper/maps/l4d_dbd2dc_new_dawn.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_new_dawn.cfg
@@ -29,7 +29,7 @@ filter:
 {
 	"targetname" "advancementtrigger_1"
 }
-; --- Teleport the tank to a better location when it spawns - credit: ProMod
+; --- Teleport the tank to a better location (in ceiling above the parking garage exit) when it spawns - credit: ProMod
 modify:
 {
 	match:
@@ -194,7 +194,7 @@ add:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
-; --- Remove a car that starts stuck on the ground and kills players
+; --- Remove a car that spawns stuck in the ground and can kill players
 filter:
 {
 	"hammerid" "887646"
@@ -1192,7 +1192,7 @@ add:
 	"disableshadows" "1"
 	"rendermode" "10"
 }
-; --- Fix hittable cars using the same name
+; --- Fix hittable cars using the same name that move when the tank hits a different car
 modify:
 {
 	match:
@@ -1346,7 +1346,7 @@ add:
 ; ==    Remove or adjust sounds played by the map    ==
 ; =====================================================
 filter:
-; --- Remove CJ / radio dude voice lines and other voice lines / triggered sound effects
+; --- Remove CJ / radio voice lines and other voice lines / triggered sound effects
 {
 	"targetname" "cj_safehouse"
 }
@@ -1419,7 +1419,7 @@ filter:
 {
 	"hammerid" "1430686"
 }
-; --- Remove miscellanous sound effects from the map
+; --- Remove miscellaneous sound effects from the map
 {
 	"targetname" "static_sound1"
 }
