--- a/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
@@ -1580,7 +1580,6 @@ modify:
 		"spawnflags" "0"
 	}
 }
-
 ; --- Fix junk props that use dynamic so don't get removed or fixed with global filters
 filter:
 {
@@ -2362,8 +2361,7 @@ add:
 ; ==    Remove or adjust sounds played by the map    ==
 ; =====================================================
 filter:
-
-; --- Remove CJ / radio dude voice lines
+; --- Remove CJ / radio voice lines
 {
 	"targetname" "eingangsbesprechung"
 }
@@ -2409,7 +2407,7 @@ filter:
 {
 	"targetname" "church_guy"
 }
-; --- Remove miscellanous sound effects from the map
+; --- Remove miscellaneous sound effects from the map
 {
 	"message" "ambient/ambience/urban_rooftop_ambloop02.wav"
 }
