--- a/cfg/stripper/maps/l4d_dbd2dc_undead_center.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_undead_center.cfg
@@ -1445,7 +1445,7 @@ filter:
 {
 	"hammerid" "1002635"
 }
-; --- Stop pallet by forklift glowing for tanks
+; --- Fix a pallet by forklift glowing for tanks
 modify:
 {
 	match:
@@ -1751,7 +1751,7 @@ add:
 	"disableshadows" "1"
 	"targetname" "unmarked_breakwall_texture6"
 }
-; --- Remove a breakable wall on a store in the first area
+; --- Open up a breakable wall on a store in the first mall area
 filter:
 {
 	"hammerid" "1553054"
@@ -1775,7 +1775,7 @@ filter:
 ; ==                  SOUND REMOVAL                  ==
 ; ==    Remove or adjust sounds played by the map    ==
 ; =====================================================
-; --- Remove CJ / radio dude voice lines and other voice lines / triggered sound effects
+; --- Remove CJ / radio voice lines and other voice lines / triggered sound effects
 filter:
 {
 	"targetname" "cj_1"
@@ -1897,7 +1897,7 @@ filter:
 {
 	"targetname" "coin_found"
 }
-; --- Remove miscellanous sound effects from the map
+; --- Remove miscellaneous sound effects from the map
 {
 	"targetname" "server_door"
 }
