--- a/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
@@ -275,16 +275,21 @@ filter:
 {
 	"targetname" "tank_landing"
 }
-; --- Make the barricade event end when the barricade has stopped burning
+; --- Make the barricade event use a gauntlet event script instead of a finale script, and end the event when the barricade has burned down
 modify:
 {
 	match:
 	{
-		"targetname" "gas_relay_kill"
+		"targetname" "Start_The_Gas"
+	}
+	delete:
+	{
+		"OnPressed" "directorScriptedPanicEventmap2_crescendo3-1"
 	}
 	insert:
 	{
-		"OnTrigger" "director,EndScript,,0,1"
+		"OnPressed" "director,BeginScript,c2m4_barns_onslaught2,3,-1"
+		"OnPressed" "director,EndScript,,50,1"
 	}
 }
 ; --- Make the event always last the same amount of time
@@ -316,6 +321,21 @@ modify:
 		"filtername" "infected_filter"
 	}
 }
+; --- Removed battlefield properties from nav areas by the end saferoom that messes with common spawns
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "remove_battlefield_areas,ApplyNavAttributes,,10,-1"
+}
+{
+	"classname" "script_nav_attribute_region"
+	"origin" "3792 6207 -381"
+	"extent" "2864 2367 445"
+	"spawnflags" "256"
+	"targetname" "remove_battlefield_areas"
+	"remove_attributes" "1"
+}
+
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
