--- a/cfg/stripper/maps/l4d_dbd2dc_clean_up.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_clean_up.cfg
@@ -374,7 +374,7 @@ modify:
 	insert:
 	{
 		; --- New timings
-		"OnPressed" "director,BeginScript,l4d_dbd2dc_clean_up_north_gate_rework,0,-1"
+		"OnPressed" "director,BeginScript,c2m4_barns_onslaught2,1,-1"
 		"OnPressed" "Customer_Door04,StartForward,,5,-1"
 		"OnPressed" "Customer_Door03,StartForward,,5,-1"
 		"OnPressed" "Customer_Door02,StartForward,,5,-1"
