--- a/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
@@ -1538,6 +1538,36 @@ modify:
 	}
 }
 ; --- Set 4 - event_05_door_exit
+{
+	match:
+	{
+		"hammerid" "1213406"
+	}
+	delete:
+	{
+		"OnStartTouch" "event_05_door_exitOpen3.02-1"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "1013677"
+	}
+	replace:
+	{
+		"spawnpos" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "1013682"
+	}
+	replace:
+	{
+		"spawnpos" "1"
+	}
+}
 ; --- Remove crate that can sometimes block the door
 filter:
 {
