--- a/cfg/stripper/maps/l4d_dbd2dc_undead_center.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_undead_center.cfg
@@ -1512,7 +1512,16 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Remove glass doors on The Henricks store
+; --- Filing cabinet to indicate invisible clip in the offices
+{
+	"classname" "prop_dynamic_override"
+	"origin" "-2832 7893 -672"
+	"angles" "0 105 0"
+	"model" "models/props/cs_office/file_cabinet1_group.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Remove glass doors on The Hendricks store
 filter:
 {
 	"targetname" "tank_door"
