Updated global fixes for breakable props

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -27,6 +27,51 @@
 ; ==     Fix entities using the wrong class type     ==
 ; =====================================================
 modify:
+; --- Hotfixes for specific props
+{
+	match:
+	{
+		"classname" "prop_physics_multiplayer"
+		"model" "models/props_diescraper/statue.mdl"
+	}
+	replace:
+	{
+		"classname" "prop_physics"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics_multiplayer"
+		"model" "models/props\cs_assault\forklift_brokenlift.mdl"
+	}
+	replace:
+	{
+		"classname" "prop_physics_override"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics_multiplayer"
+		"model" "models/props/cs_assault/forklift.mdl"
+	}
+	replace:
+	{
+		"classname" "prop_physics_override"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics_multiplayer"
+		"model" "/.*militiarock.*/"
+	}
+	replace:
+	{
+		"classname" "prop_physics_override"
+	}
+}
 ; --- Fix custom campaigns using the wrong physics prop type, which prevents our global fixes from being applied
 ; --- prop_physics_multiplayer is a legacy entity that functions identically to prop_physics_override but serves no purpose in L4D2, it does not affect networking overhead
 {
@@ -39,18 +84,7 @@ modify:
 		"classname" "prop_physics"
 	}
 }
-; --- Hotfixes for specific props
-; --- Diescraper ball
-{
-	match:
-	{
-		"model" "models/props_diescraper/statue.mdl"
-	}
-	replace:
-	{
-		"classname" "prop_physics"
-	}
-}
+
 
 ; =====================================================
 ; ==                 ITEM DENSITY FIX                ==
