opened carousel room

--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -55,7 +55,7 @@ add:
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
 add:
-; --- Hittable log in the open area on the left after the ferry
+; --- Hittable car in the open area on the left after the ferry
 {
 	"classname" "prop_physics"
 	"origin" "-3605 8503 5"
