--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -104,10 +104,10 @@ filter:
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
 add:
-; --- Ammo pile by first game hut after bumper cars section
+; --- Ammo pile after bumper cars section
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "325 1708 -192"
+	"origin" "431 1990 -192"
 	"angles" "0 180 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
@@ -910,6 +910,23 @@ add:
 	"origin" "559 2159 466"
 	"mins" "-28 -28 -558"
 	"maxs" "28 28 558"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Flood light generator after bumper cars
+{
+	"classname" "prop_dynamic"
+	"origin" "410 2167 -192"
+	"angles" "0 210 0"
+	"model" "models/props_vehicles/floodlight_generator_pose01_static.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "425 2141 -95"
+	"mins" "-6 -6 -98"
+	"maxs" "6 6 98"
 	"initialstate" "1"
 	"BlockType" "1"
 }
