--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -899,7 +899,7 @@ add:
 ; --- Porta potty by hedges after bumper cars
 {
 	"classname" "prop_dynamic"
-	"origin" "559 2159 -192"
+	"origin" "570 2159 -192"
 	"angles" "0 180 0"
 	"model" "models/props_urban/outhouse001.mdl"
 	"solid" "6"
@@ -907,7 +907,7 @@ add:
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "559 2159 466"
+	"origin" "570 2159 466"
 	"mins" "-28 -28 -558"
 	"maxs" "28 28 558"
 	"initialstate" "1"
@@ -916,7 +916,7 @@ add:
 ; --- Flood light generator after bumper cars
 {
 	"classname" "prop_dynamic"
-	"origin" "410 2167 -192"
+	"origin" "408 2169 -192"
 	"angles" "0 210 0"
 	"model" "models/props_vehicles/floodlight_generator_pose01_static.mdl"
 	"solid" "6"
@@ -924,11 +924,30 @@ add:
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "425 2141 -95"
+	"origin" "423 2143 -95"
 	"mins" "-6 -6 -98"
 	"maxs" "6 6 98"
 	"initialstate" "1"
 	"BlockType" "1"
+}
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "losfix_generator_bumpers_a,AddOutput,mins -1 -35 -10,0,-1"
+	"OnMapSpawn" "losfix_generator_bumpers_a,AddOutput,maxs 1 35 10,0,-1"
+	"OnMapSpawn" "losfix_generator_bumpers_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_generator_bumpers_b,AddOutput,mins -25 -1 -10,0,-1"
+	"OnMapSpawn" "losfix_generator_bumpers_b,AddOutput,maxs 25 1 10,0,-1"
+	"OnMapSpawn" "losfix_generator_bumpers_b,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "401 2182 -184"
+	"targetname" "losfix_generator_bumpers_a"
+}
+{
+	"classname" "func_brush"
+	"origin" "413 2164 -184"
+	"targetname" "losfix_generator_bumpers_b"
 }
 ; --- Wooden boards under barn ceiling to cover up props from the roof that clip through
 ; --- Left row
