Various prop fixes and small adjustments

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -1106,6 +1106,47 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Boards to assist with crossing around the skybox on the motel roof
+{
+	"classname" "prop_dynamic"
+	"origin" "2807 3130 -647"
+	"angles" "0 270 0"
+	"model" "models/lighthouse/props/wood_plank_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2807 3118 -647"
+	"angles" "0 90 0"
+	"model" "models/lighthouse/props/wood_plank_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2910 3130 -646.9"
+	"angles" "0 270 0"
+	"model" "models/lighthouse/props/wood_plank_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2910 3118 -646.9"
+	"angles" "0 90 0"
+	"model" "models/lighthouse/props/wood_plank_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "2858.5 3124 -647"
+	"mins" "-115.5 -12 -1"
+	"maxs" "115.5 12 1.15"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Shrub on island before the final hill
 {
 	"classname" "prop_dynamic"
@@ -1259,6 +1300,23 @@ add:
 	"origin" "-224 -2080 -1079"
 	"angles" "0 165 0"
 	"model" "models/props_urban/fence_cover001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Highway barrels by the end saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "-378 -1899 -1056"
+	"angles" "0 0 0"
+	"model" "models/props_urban/highway_barrel001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-506 -1899 -1056"
+	"angles" "0 0 0"
+	"model" "models/props_urban/highway_barrel001.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
@@ -1463,15 +1521,6 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_rooftop/gutter_pipe_256.mdl"
 	"solid" "0"
-	"disableshadows" "1"
-}
-; --- Assist with crossing around skybox
-{
-	"classname" "prop_dynamic"
-	"origin" "2853 3153 -638"
-	"angles" "0 0 0"
-	"model" "models/props_street/awning_long_limitedcollision.mdl"
-	"solid" "6"
 	"disableshadows" "1"
 }
 ; --- Infected ladder to stop players getting stuck behind debris after the drop
