--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -721,37 +721,22 @@ add:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
-; --- Highway sign on the bridge at the start
+; --- Highway barrels on the bridge at the start
 {
 	"classname" "prop_dynamic"
-	"origin" "5133 7235 -9"
-	"angles" "0 270 0"
-	"model" "models/props_highway/highway_sign_post002.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"lightingorigin" "highway_sign_lighting"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5146 7217 287"
-	"angles" "0 270 0"
-	"model" "models/props_highway/highway_sign001.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5284 7277 260"
+	"origin" "5284 7224 257"
 	"angles" "0 0 0"
 	"model" "models/props_urban/highway_barrel001.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Fix lighting
 {
-	"classname" "info_target"
-	"origin" "5146 7217 287"
-	"targetname" "highway_sign_lighting"
+	"classname" "prop_dynamic"
+	"origin" "5124 7224 257"
+	"angles" "0 0 0"
+	"model" "models/props_urban/highway_barrel001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 ; --- Tree behind a fence in the open area at the start
 {
