--- a/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
@@ -1342,6 +1342,19 @@ modify:
 		"spawnflags" "6"
 	}
 }
+; --- Fix infected ghosts falling through plank walkway in the warehouse
+{
+	match:
+	{
+		"targetname" "muahahahahahaha"
+	}
+	replace:
+	{
+		"classname" "func_brush"
+		"Solidity" "2"
+		"spawnflags" "2"
+	}
+}
 ; --- Add an arrow to help direct survivors on the rooftop
 add:
 {
