prop_physics_multiplayer update

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -1328,6 +1328,7 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "saferoom_concrete"
 }
 {
 	"classname" "prop_dynamic"
@@ -1336,6 +1337,7 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "saferoom_concrete"
 }
 {
 	"classname" "prop_dynamic"
@@ -1344,6 +1346,7 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "saferoom_concrete"
 }
 {
 	"classname" "prop_dynamic"
@@ -1352,6 +1355,7 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "saferoom_concrete"
 }
 {
 	"classname" "prop_dynamic"
@@ -1376,6 +1380,11 @@ add:
 	"model" "models/props_highway/plywood_01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+{
+	"classname" "info_target"
+	"origin" "-907 -2330 -994"
+	"targetname" "saferoom_concrete"
 }
 
 ; =====================================================
