--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -946,28 +946,19 @@ add:
 ; --- Pipe to stand on at the ladder in the sewer
 {
 	"classname" "prop_dynamic"
-	"origin" "5952 410 -99"
+	"origin" "5952 403 -99"
 	"angles" "0 0 -90"
 	"model" "models/props_pipes/pipeset08d_256_001a.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Guard rails around the sewer ladder
 {
-	"classname" "prop_dynamic"
-	"origin" "5895 377 20"
-	"angles" "0 180 0"
-	"model" "models/props_c17/handrail04_medium.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5977 406 0"
-	"angles" "0 180 0"
-	"model" "models/props_c17/handrail04_corner.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "5945 405 -48"
+	"mins" "-17 -3 -48"
+	"maxs" "17 3 48"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 
 
