--- a/cfg/stripper/maps/c10m3_ranchhouse.cfg
+++ b/cfg/stripper/maps/c10m3_ranchhouse.cfg
@@ -499,6 +499,12 @@ add:
 	"model" "models/props_vehicles/bus01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "lightingfix_bus"
+}
+{
+	"classname" "info_target"
+	"origin" "-10982 -4443 13"
+	"targetname" "lightingfix_bus"
 }
 ; --- Block LOS under bus
 {
