--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -731,12 +731,100 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Billboard to show where skybox blocks off the motel roof by the drop
+; --- Fences to show where skybox blocks off the motel roof
 {
 	"classname" "prop_dynamic"
-	"origin" "2786 3258 -515"
+	"origin" "2779 3203 -646"
 	"angles" "0 0 0"
-	"model" "models/props_rooftop/billboard03.mdl"
+	"model" "models/props_urban/fence001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2779 3319 -646"
+	"angles" "0 0 0"
+	"model" "models/props_urban/fence001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2651 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2403 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2155 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1907 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1659 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1411 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1163 3378 -645"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "946 3287 -645"
+	"angles" "0 135 0"
+	"model" "models/props_urban/fence001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "833 3174 -645"
+	"angles" "0 135 0"
+	"model" "models/props_urban/fence001_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "810 3151 -645"
+	"angles" "0 135 0"
+	"model" "models/props_urban/fence_post001.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
