Fix global filters issues
c2m2 add tent by saferoom

--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -1388,6 +1388,24 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Tent by the end saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "-3393 -5378 -64"
+	"angles" "0 0 0"
+	"model" "models/props_misc/fairground_tent_closed.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendercolor" "211 124 109"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3393 -5378 420"
+	"mins" "-64 -64 -348"
+	"maxs" "64 64 348"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Porta potties by the end saferoom
 {
 	"classname" "prop_dynamic"
