--- a/cfg/stripper/maps/c10m1_caves.cfg
+++ b/cfg/stripper/maps/c10m1_caves.cfg
@@ -402,9 +402,9 @@ add:
 ; --- Right side of the bridge valley
 {
 	"classname" "env_physics_blocker"
-	"origin" "-9568 -11680 0"
-	"mins" "-864 -1312 -512"
-	"maxs" "864 1312 512"
+	"origin" "-9568 -11680 384"
+	"mins" "-864 -1312 -896"
+	"maxs" "864 1312 896"
 	"initialstate" "1"
 	"BlockType" "0"
 }
@@ -766,6 +766,34 @@ add:
 	"classname" "func_brush"
 	"origin" "-12373 -14105 -83"
 	"targetname" "los_saferoom_bus_b"
+}
+; --- Tree to cross between cliffs in the valley to get above the saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "-11128 -11048 414"
+	"angles" "0 0 82"
+	"model" "models/props_foliage/tree_poplar_01.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-11144 -11372 446"
+	"angles" "0 0 -8"
+	"mins" "-24 -324 -16"
+	"maxs" "24 324 16"
+	"boxmins" "-24 -324 -16"
+	"boxmaxs" "24 324 16"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-11138 -11788 508"
+	"angles" "0 67 180"
+	"model" "models/props/cs_militia/militiarock06.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 
 ; =====================================================
